2.3.1 (????-??-??)
    - added support for a secondary search constraint on LDAP searches
    - unconditionally enabled rdnpref (disambiguation using the RDN) for LDAP
      searches

2.3.0 (2023-03-21)
    - fixed memory leak and logging problem in ACL code
    - fixed regression that added invalid addresses during expansion
    - improved the algorithm that generates email addresses from LDAP group
      names
    - improved RFC compliance of email address validation
    - fixed LDAP bug where entries with no valid mail forwarding attributes
      were not treated as entries with no mail forwarding, so mail was silently
      dropped instead of bounced.

2.2.0 (2022-12-12)
    - fixed spurious bounces from transient DNS errors
    - added file-based ACLs
    - re-added default user authorization setting
    - improved compatibility with OpenSSL 3.x

2.1.0 (2022-07-19)
    - added support for separation of moderators and permitted senders
    - added permitted domains for groups
    - added message wrapping for moderated messages
    - unified permission logic into a single flow to smoothe out inconsistencies
    - disabled sender checking in global_relay mode
    - added more statsd metrics
    - fixed old message check

2.0.4 (2022-06-30)
    - fixed extensions advertised on the legacy TLS port
    - fixed race when releasing messages from jail
    - fixed config validation failures on hostnames with `-`
    - fixed bitbucketing
    - removed forcible skipping of initial delivery attempts of messages
      destined for jail
    - enabled local delivery in default localhost config
    - fixed relative priority of deliver.punt.always and local deliveries
    - added more statsd metrics

2.0.3 (2022-05-09)
    - fixed releasing messages from jail via simc
    - added more statsd metrics
    - fixed crash during LDAP retries when reconnect fails
    - added support for autoreply date ranges

2.0.2 (2022-04-05)