@@ -536,7 +536,6 @@ domain "localhost.DEFAULT" {
 #               request = [];
 #               mail = mail
 #               forwarding = mailforwardingaddress;
-#               group_forwarding = mailforwardingaddress;
 #               autoreply = onvacation;
 #               autoreply_start = umichAutoReplyStart;
 #               autoreply_end = umichAutoReplyEnd;
